<resources>
    <string name="app_name">PhoneTask</string>
    <string name="action_settings">Settings</string>

    <string name="select_category"><b>Select Category</b></string>
    <string name="hot_sales"><b>Hot sales</b></string>
    <string name="best_saller"><b>Best seller</b></string>
    <string name="view_all">view all</string>
    <string name="see_more">see more</string>
    <string name="computer">Computer</string>
    <string name="phones">Phones</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="shopping">Shopping</string>
    <string name="explorer">Explorer</string>
    <string name="ecommerce_concept"><b>Ecommerce \nConcept</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>