<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:visibility="visible"
    tools:context=".presenter.main_screen.MainScreenFragment">

    <LinearLayout
        android:id="@+id/l_l_filter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingStart="150dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/i_v_location"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_location"
            />

        <TextView
            android:id="@+id/t_v_location_current"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Moscow, Moscow"
            android:textColor="@color/black"
            android:textSize="15px"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/s_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            />

        <ImageView
            android:id="@+id/i_v_filter"
            android:layout_width="12dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_filter"
            android:layout_marginStart="90dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_l_select_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/l_l_filter"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/t_v_select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/select_category"
            android:textColor="@color/black"
            android:textSize="25px"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t_v_view_all"
            style="@style/PersonalReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/view_all"
            android:textSize="15px"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_l_selected_item"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/l_l_select_category">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/i_v_phones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:src="@drawable/ic_baseline_phone_clicked"
                android:focusedByDefault="true"
                app:cardCornerRadius="50dp"
                android:focusable="true"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/t_v_phones"
                style="@style/PersonalReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phones"
                android:textSize="12px"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/i_v_computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:src="@drawable/ic_computer" />
            />

            <TextView
                android:id="@+id/t_v_computer"
                style="@style/PersonalReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:textSize="12px"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/i_v_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:src="@drawable/ic_health" />
            />

            <TextView
                android:id="@+id/t_v_health"
                style="@style/PersonalReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homes"
                android:textSize="12px"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/i_v_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:src="@drawable/ic_book" />
            />

            <TextView
                android:id="@+id/t_v_books"
                style="@style/PersonalReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Books"
                android:textSize="12px"

                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_l_search_field"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:orientation="horizontal"
        android:paddingStart="23dp"
        app:layout_constraintTop_toBottomOf="@+id/l_l_selected_item"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/i_v_search"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/e_t_search"
            android:layout_width="300dp"
            android:layout_height="34dp"
            android:background="@color/white"
            android:hint="Search"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="12px"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/i_v_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:src="@drawable/ic_search_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_l_hot_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/l_l_search_field"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/t_v_hot_sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/hot_sales"
            android:textColor="@color/black"
            android:textSize="25px"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t_v_hot_see_more"
            style="@style/PersonalReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/see_more"
            android:textSize="15px"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/c_v_hot_sales"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:cardBackgroundColor="@color/total_black"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/l_l_hot_sales"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/i_v_hot_sales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp">


            <ImageView
                android:id="@+id/c_v_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_new_lable"
                app:cardCornerRadius="50dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/t_v_hot_sales_phone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="25px" />

            <TextView
                android:id="@+id/t_v_hot_sales_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11px"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/b_hot_sales_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@color/white"
                android:text="Buy now!"
                android:textColor="@color/black"
                android:textSize="11px" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/l_l_best_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/c_v_hot_sales"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/t_v_best_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/best_saller"
            android:textColor="@color/black"
            android:textSize="25px"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t_v_best_see_more"
            style="@style/PersonalReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/see_more"
            android:textSize="15px"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/r_v_best_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@+id/l_l_best_seller"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/n_v_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_menu_nav"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>